--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ pre {
     white-space: pre-wrap;
 }
 
-section code {
+div code {
     font-family: 'Roboto',  sans-serif;
     font-weight: 300;
     font-size: 80%;
@@ -77,7 +77,8 @@ section code {
     background-color: #F4F4F4;
     padding: 0.5rem 1.5rem;
     display: block;
-    max-width: 100%}
+    max-width: 100%; 
+}
 
 .snippet {
     font-style: italic;
@@ -160,6 +161,11 @@ figcaption {
 
 section p {
     margin-top: 0;
+}
+
+#portfolio-footer {
+    margin: 5rem 0 1.5rem 0;
+
 }
 
 #styleguide-footer {
@@ -253,12 +259,8 @@ section p {
     margin-bottom: 1.75rem;
 }
 
-#filter-row {
-    /*
-    margin-left: 0;
-    margin-right: 0;
-    float: left;
-    */
+#filter-bar {
+    margin-bottom: 5rem;
 }
 
 .filter-button {
@@ -274,8 +276,6 @@ section p {
     background-color: #FFFFFF;
     border-color: #FFFFFF;
 }
-
-
 
 
 #backToTopButton {
@@ -302,7 +302,7 @@ section p {
 .icon {
     display: inline-block;
     margin: 0 0.5rem;
-    width: 40px;
+    width: 2rem;
     height: auto;
     opacity: 1;
     -webkit-transition: opacity 0.5s ease-out;
@@ -312,121 +312,4 @@ section p {
 
 .icon:active, .icon:focus, .icon:hover {
     opacity: 0.5!important;
-}
-
-
-
-
-/*SWATCHES*/
-.swatch {
-    display: inline-block;
-    text-align: center;
-    padding: 4rem 2rem;
-    color: #000;
-}
-
-#inspo-img {
-    margin: 0rem;
-    padding: 0rem;
-    width: 152px;
-}
-/* PALETTE #1 */
-.swa1 {
-    background: #88BBD6;
-}
-.swa2 {
-    background: #99D3DF;
-}
-.swa3 {
-    background: #F4F4F4;
-}
-.swa4 {
-    background: #ED6A5A;
-}
-.swa5 {
-    background: #D6D6D8;
-}
-.swa6 {
-    background: #2A2A2A;
-    color: #DBDBDB;
-}
-/* PALETTE #2 */
-.swa7 {
-    background: #C8251C;
-    color: #FFFFFF;
-}
-.swa8 {
-    background: #EC4417;
-    color: #FFFFFF;
-}
-.swa9 {
-    background: #FE6016;
-    color: #FFFFFF;
-}
-.swa10 {
-    background: #FE7A16;
-    color: #FFFFFF;
-}
-.swa11 {
-    background: #FEA120;
-    color: #FFFFFF;
-}
-.swa12 {
-    background: #659565;
-    color: #FFFFFF;
-}
-/* PALETTE #3 */
-.swa13 {
-    background: #219290;
-    color: #FFFFFF;
-}
-.swa14 {
-    background: #69C6B3;
-    color: #FFFFFF;
-}
-.swa15 {
-    background: #73C887;
-    color: #FFFFFF;
-}
-.swa16 {
-    background: #EFD485;
-    color: #FFFFFF;
-}
-.swa17 {
-    background: #F1B3A4;
-    color: #FFFFFF;
-}
-.swa18 {
-    background: #9479A2;
-    color: #FFFFFF;
-}
-/* PALETTE #4 */
-.swa19 {
-    background: #008DD5;
-    color: #FFFFFF;}
-.swa20 {
-    background: #FE4A49;
-    color: #FFFFFF;}
-.swa21 {
-    background: #FFE44F;
-    color: #FFFFFF;}
-.swa22 {
-    background: #FFFFFF;
-    color: #000000;}
-.swa23 {
-    background: #373F51;
-    color: #FFFFFF;}
-.swa24 {
-    background: #000000;
-    color: #FFFFFF;
-}
-
-
-
-
-.grid-block {
-    -ms-flex-grow: 1;
-    -webkit-box-flex: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1;
 }
