--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -3,6 +3,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
 .title {
     display: -webkit-flex;
     display: -ms-flex;
@@ -14,6 +15,7 @@
     flex-wrap: wrap;
     margin: 0rem 2rem;
 }
+
 .container {
     display: -webkit-flex;
     display: -ms-flex;
@@ -29,12 +31,14 @@
     justify-content: space-around;
     margin: 0rem 2rem;
 }
+
 .style-nav {
     -webkit-flex: 1 1 5em;
     -ms-flex: 1 1 5em;
     -webkit-box-flex: 1;
     flex: 1 1 5em;
 }
+
 .page-content {
     -webkit-flex: 2 2 15em;
     -ms-flex: 2 2 15em;
@@ -42,6 +46,7 @@
     flex: 2 2 15em;
     margin: 0rem 2rem;
 }
+
 .citations-content {
     -webkit-flex: 2 2 15em;
     -ms-flex: 2 2 15em;
@@ -49,6 +54,7 @@
     flex: 2 2 15em;
     margin: 0rem 2rem;
 }
+
 .style-nav-container {
     display: -webkit-flex;
     display: -ms-flex;
@@ -64,21 +70,27 @@
     -ms-flex-pack: start;
     justify-content: flex-start;
 }
+
 .nav-item-structure {
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
     text-align: center;
 }
+
 .sub-container {
     display: block;
     margin: 0;
 }
+
 .nav-item {
     -ms-flex-preferred-size: 100%;
-    flex-basis: 100%}
+    flex-basis: 100%;
+}
+
 .product-text {
     text-align: left;
 }
+
 .product-content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -99,6 +111,7 @@
     margin: 0rem 1.5rem;
     margin-bottom: 2rem;
 }
+
 .product-small-item-container {
     display: -webkit-flex;
     display: -ms-flex;
@@ -116,6 +129,7 @@
     margin: 0rem 0.5rem;
     margin-bottom: 2rem;
 }
+
 .product {
     position: relative;
     display: inline-block;
@@ -124,15 +138,19 @@
     text-align: center;
     overflow: hidden;
 }
+
 .product-description {
     max-width: 85%;
     text-align: left;
     margin: 0.8rem 1.5rem;
 }
+
 .product-small-item {
     display: inline-block;
     -ms-flex-preferred-size: 100%;
-    flex-basis: 100%}
+    flex-basis: 100%;
+}
+
 .index-block-content-container {
     display: -webkit-flex;
     display: -ms-flex;
@@ -148,31 +166,38 @@
     justify-content: space-around;
     margin: 1rem 1.3rem;
 }
+
 .block {
     display: inline-block;
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
     padding: 1rem 1rem;
 }
+
 .grid-block {
     -ms-flex-grow: 1;
     -webkit-box-flex: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
+
+/* QUERIES */
 @media(min-width:25em) and (max-width:42.5em) {
     .index-block-content-container {
-    -webkit-justify-content: flex-start;
-    -ms-justify-content: flex-start;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    margin: 1rem 2rem;
+        -webkit-justify-content: flex-start;
+        -ms-justify-content: flex-start;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        margin: 1rem 2rem;
+    }
+    .block {
+        -ms-flex-preferred-size: 70%;
+        flex-basis: 70%;
+    }
 }
-.block {
-    -ms-flex-preferred-size: 70%;
-    flex-basis: 70%}
-}@media(min-width:42.5em) and (max-width:56.25em) {
+
+@media(min-width:42.5em) and (max-width:56.25em) {
     .index-block-content-container {
     -webkit-justify-content: flex-start;
     -ms-justify-content: flex-start;
@@ -241,4 +266,110 @@
     -ms-flex-pack: start;
     justify-content: flex-start;
 }
+}
+
+
+/**/
+#opt1 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+#opt2 {
+    font-family: 'Spectral';
+}
+
+#opt3 {
+    font-family: 'Spectral';
+}
+
+
+
+/*styleguide swatch blocks */
+.grid-block {
+    -ms-flex-grow: 1;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+}
+
+/*SWATCHES*/
+.swatch {
+    display: inline-block;
+    text-align: center;
+    padding: 4rem 2rem;
+    color: #000;
+}
+
+#inspo-img {
+    margin: 0rem;
+    padding: 0rem;
+    width: 152px;
+}
+
+/* PALETTE #1 */
+.swa1 {
+    background: #88BBD6;
+}
+.swa2 {
+    background: #99D3DF;
+}
+.swa3 {
+    background: #F4F4F4;
+}
+.swa4 {
+    background: #ED6A5A;
+}
+.swa5 {
+    background: #D6D6D8;
+}
+.swa6 {
+    background: #2A2A2A;
+    color: #DBDBDB;
+}
+
+/* PALETTE #2 */
+.swa7 {
+    background: #219290;
+    color: #FFFFFF;
+}
+.swa8 {
+    background: #69C6B3;
+    color: #FFFFFF;
+}
+.swa9 {
+    background: #73C887;
+    color: #FFFFFF;
+}
+.swa10 {
+    background: #EFD485;
+    color: #FFFFFF;
+}
+.swa11 {
+    background: #F1B3A4;
+    color: #FFFFFF;
+}
+.swa12 {
+    background: #9479A2;
+    color: #FFFFFF;
+}
+
+/* PALETTE #4 */
+.swa13 {
+    background: #008DD5;
+    color: #FFFFFF;}
+.swa14 {
+    background: #FE4A49;
+    color: #FFFFFF;}
+.swa15 {
+    background: #FFE44F;
+    color: #FFFFFF;}
+.swa16 {
+    background: #FFFFFF;
+    color: #000000;}
+.swa17 {
+    background: #373F51;
+    color: #FFFFFF;}
+.swa18 {
+    background: #000000;
+    color: #FFFFFF;
 }
