Added Times Past project page, and updated Projects preview page

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.navigation {
+  margin-bottom: 1rem;
+}
+
 .container {
     display: -webkit-flex;
     display: -ms-flex;
