--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ body {
 }
 
 h1 {
+  margin: 0 0 2.5rem 0;
     font-family: 'Raleway',  sans-serif;
     color:var(--headerColor);
     font-weight: 400;
