--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -41,7 +41,8 @@
     -webkit-box-flex: 2;
     flex: 2 2 15em;
 }
-.banner-txt {
+
+/* .banner-txt {
     display: -webkit-flex;
     display: -ms-flex;
     display: -webkit-box;
@@ -54,7 +55,7 @@
     -ms-justify-content: space-around;
     -ms-flex-pack: distribute;
     justify-content: space-around;
-}
+} */
 
 img {
     display: inline-block;
@@ -62,7 +63,7 @@ img {
     justify-content: space-around;
 }
 
-.bio {
+/* .bio {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -70,22 +71,30 @@ img {
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
-}
+} */
 
-.bio img {
+/* .bio img {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
     margin-left: 0.5rem;
-}
+} */
 
-.bio-text {
+/* .bio-text {
     text-align: left;
-}
+} */
 
 
 /* MEDIA QUERIES */
 /*576px = sm breakpoint in Bootstrap*/
+
+@media (max-width: 600px) {
+  p {
+    margin: auto;
+    margin-bottom: 1rem;
+    width: 60%;
+  }
+}
 
 /* Project filter list */
 @media (max-width: 767px) {
@@ -96,13 +105,9 @@ img {
 
 /* About: make text have larger margin */
 @media (max-width: 767px) {
-  /* p {
-    margin: 1rem;
-  } */
-
-  #myBigOlFace {
+  #portrait {
     width: auto;
-    margin: 0;
+    margin: 0 0 2rem 0;
     padding-left: 10rem;
     padding-right: 10rem;
   }
@@ -192,7 +197,7 @@ img {
     }
 }
 
-@media(min-width:40.625em) {
+/* @media(min-width:40.625em) {
     .content-container {
         margin: 0 auto;
     }
@@ -203,4 +208,4 @@ img {
         float: right;
         width: 40%
     }
-}
+} */
