--- a/css/main.css
+++ b/css/main.css
@@ -33,13 +33,13 @@ body {
 
 h1 {
   margin: 0 0 2.5rem 0;
-    font-family: 'Raleway',  sans-serif;
+    font-family: 'Montserrat',  sans-serif;
     color:var(--headerColor);
     font-weight: 400;
 }
 
 h2 {
-    font-family: 'Raleway',  sans-serif;
+    font-family: 'Montserrat',  sans-serif;
     color: var(--header2Color);
     font-weight: 400;
     margin: 0.5rem 0rem;
@@ -47,7 +47,7 @@ h2 {
     max-width: 100%}
 
 h3 {
-    font-family: 'Raleway',  sans-serif;
+    font-family: 'Montserrat',  sans-serif;
     color: var(--header3Color);
     font-weight: 400;
     margin: 0.5rem 0;
@@ -55,14 +55,14 @@ h3 {
 }
 
 p {
-    font-family: 'Roboto',  sans-serif;
+    font-family: 'Roboto',  sans-sans-serif;
     font-weight: 300;
     font-size: 1rem;
     max-width: 75rem;
 }
 
 ol, ul {
-    font-family: 'Roboto',  sans-serif;
+    font-family: 'Roboto',  sans-sans-serif;
     font-weight: 300;
     font-size: 1rem;
 }
@@ -100,7 +100,7 @@ pre {
 }
 
 div code {
-    font-family: 'Roboto',  sans-serif;
+    font-family: 'Roboto',  sans-sans-serif;
     font-weight: 300;
     font-size: 80%;
     color: #88BBD6;
@@ -116,7 +116,7 @@ div code {
 }
 
 button {
-    font-family: 'Raleway',  sans-serif;
+    font-family: 'Montserrat',  sans-serif;
     padding: 0.50rem 1rem;
     color: var(--buttonTextColor);
     border-radius: 15px;
@@ -164,12 +164,12 @@ figure img {
   border: solid 1px #FFFFFF;
 }
 
-#aboutImg img {
-  margin: 1rem;
+#portrait {
+  margin: 0;
 }
 
 figcaption {
-    font-family: 'Roboto',  sans-serif;
+    font-family: 'Roboto',  sans-sans-serif;
     font-style: italic;
     font-weight: 100;
     font-size: 0.75rem;
@@ -180,7 +180,7 @@ section p {
 }
 
 #portfolio-footer {
-    margin: 1rem 0;
+    margin: 1rem 0 1rem 0;
 
 }
 
@@ -191,6 +191,10 @@ section p {
     border: none;
     text-align: center;
     font-size: 0.75rem;
+}
+
+#tw-icon {
+  width: 50px;
 }
 
 #navLogo {
@@ -204,38 +208,35 @@ section p {
     opacity: 0.5!important;
 }
 
-.navLink a {
-    font-family: 'Raleway',  sans-serif;
-    font-weight: 300;
-    padding-left: 1rem!important;
-    color: var(--navColor)!important;
-    -webkit-transition: color 0.5s ease-out;
-    -o-transition: color 0.5s ease-out;
-    transition: color 0.5s ease-out;
-}
-
-.navLink:focus, .navLink a:active, .navLink a:hover {
-    /* color: #ED6A5A!important; */
-    color: var(--navHoverColor)!important;
-}
-
 #navTitle {
   margin: 0;
   padding: 0;
-  font-family: 'Raleway',  sans-serif;
+  /* font-family: 'Raleway',  sans-serif;
+  font-size: 1.25rem; */
+  /* font-family: 'Playfair Display',  serif;
+  font-weight: 400;
+  font-size: 1.5rem; */
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
   font-size: 1.25rem;
 }
 
 #navSubtitle {
   margin: 0;
   padding: 0;
-  font-family: 'Raleway',  sans-serif;
+  /* font-family: 'Raleway',  sans-serif;
+  font-size: 0.75rem; */
+  /* font-family: 'Playfair Display',  serif;
+  font-weight: 400;
+  font-size: 0.75rem; */
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
   font-size: 0.75rem;
 }
 
 .nav-item {
-    font-family: 'Raleway',  sans-serif;
-    font-weight: 300;
+    font-family: 'Playfair Display',  serif;
+    font-weight: 400;
     padding-left: 1rem!important;
     /* color: #2A2A2A!important; */
     color: var(--navColor)!important;
@@ -249,7 +250,22 @@ section p {
     color: var(--navHoverColor)!important;
 }
 
-.banner img {
+.nav-link {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    padding-left: 1rem!important;
+    color: var(--navColor)!important;
+    -webkit-transition: color 0.5s ease-out!important;
+    -o-transition: color 0.5s ease-out!important;
+    transition: color 0.5s ease-out!important;
+}
+
+.nav-link:focus, .nav-link:active, .nav-link:hover {
+    /* color: #ED6A5A!important; */
+    color: var(--navHoverColor)!important;
+}
+
+/* .banner img {
     position: relative;
     width: 100%;
     height: auto;
@@ -277,7 +293,7 @@ section p {
     text-align: center;
     margin: 0.25rem 0;
     color: #88BBD6;
-}
+} */
 
 #page-header {
     margin: 1.5rem 0;
@@ -307,6 +323,7 @@ section p {
 }
 
 #proj-header-1, #proj-header-2, #proj-header-3, #proj-header-4, #proj-header-5, #proj-header-6, #proj-header-7, #proj-header-8 {
+  font-weight: 200;
   position: absolute;
   top: 47.5%;
   left: 50%;
@@ -315,14 +332,11 @@ section p {
   color: #FFFFFF;
 }
 
-/* .centered-header:active, .centered-header:focus, .centered-header:hover {
-  color: #88BBD6;
-} */
 
-#filter-link {
+/* #filter-link {
   margin-bottom: 1rem;
   padding: 0.25rem 0.75rem;
-  font-family: 'Raleway',  sans-serif;
+  font-family: 'Montserrat',  sans-serif;
   font-weight: 400;
   font-size: 1.25rem;
   text-decoration: none;
@@ -341,11 +355,11 @@ section p {
   color: var(--filterCollapseBG);
   background-color: var(--filterCollapseBGHover);
   border-color: var(--filterCollapseBGHover);
-}
+} */
 
-#filter-card {
+/* #filter-card {
   padding: 1rem;
-}
+} */
 
 #filter-ul {
   margin: 0;
@@ -357,15 +371,34 @@ section p {
   margin: 0;
 }
 
-.filter-button {
-  margin: 0.25rem;
+.filter-header {
+  margin: 0.15rem;
   margin-left: 0;
-  padding: 0.25rem;
+  padding: 0.15rem;
   display: inline-block;
   color: var(--filterButtonTxtColor);
   background-color: var(--filterButtonBG);
   border-color: var(--filterButtonBG);
   text-align: left;
+  font-family: 'Montserrat',  sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.filter-button {
+  margin: 0.15rem;
+  margin-left: 0;
+  padding: 0.15rem;
+  display: inline-block;
+  color: var(--filterButtonTxtColor);
+  background-color: var(--filterButtonBG);
+  border-color: var(--filterButtonBG);
+  text-align: left;
+  /* font-family: 'Roboto',  sans-serif; */
+  font-family: 'Montserrat',  sans-serif;
+  font-weight: 200;
+  font-size: 0.9rem;
+
 
   -webkit-transition: color 0.5s ease-out;
   -o-transition: color 0.5s ease-out;
@@ -395,7 +428,7 @@ section p {
     bottom: 2vh;
     right: 2vw;
     z-index: 99;
-    font-family: 'Roboto',  sans-serif;
+    font-family: 'Roboto',  sans-sans-serif;
     background-color: #88BBD6;
     color: white;
     border: none;
