--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,8 @@
   --filterButtonTxtHover: #69C6B3;
   --filterButtonBG: #FFFFFF;
 
-  --footerTxtColor: #3A3A3A;
+  --footerTxtColor: #DADADA;
+  --footerTxtHover: #3A3A3A;
 }
 
 body {
@@ -131,8 +132,12 @@ button {
 
 .cta-button {
     margin: 1rem 0;
-    background-color: var(--buttonBGColor);
     border-color: var(--buttonBGColor);
+    background-color: var(--buttonBGColor);
+
+    -webkit-transition: border-color 0.3s ease-out,  background-color 0.3s ease-out;
+    -o-transition: border-color 0.3s ease-out,  background-color 0.3s ease-out;
+    transition: border-color 0.3s ease-out,  background-color 0.3s ease-out;
 }
 
 .cta-button:active, .cta-button:focus, .cta-button:hover {
@@ -190,6 +195,14 @@ section p {
   font-size: 0.45rem;
   text-align: center;
   color: var(--footerTxtColor);
+
+  -webkit-transition: color 0.3s ease-out,;
+  -o-transition: color 0.3s ease-out,;
+  transition: color 0.3s ease-out,;
+}
+
+#footer-copy:active, #footer-copy:focus, #footer-copy:hover {
+  color: var(--footerTxtHover);
 }
 
 #styleguide-footer {
