--- a/css/main.css
+++ b/css/main.css
@@ -196,9 +196,9 @@ section p {
   text-align: center;
   color: var(--footerTxtColor);
 
-  -webkit-transition: color 0.3s ease-out,;
-  -o-transition: color 0.3s ease-out,;
-  transition: color 0.3s ease-out,;
+  -webkit-transition: color 0.3s ease-out;
+  -o-transition: color 0.3s ease-out;
+  transition: color 0.3s ease-out;
 }
 
 #footer-copy:active, #footer-copy:focus, #footer-copy:hover {
