Updates made to nav bar links CSS

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -116,6 +116,7 @@ img {
 @media (max-width: 600px) {
     #navNameText {
         display: none;
+        /* text-align: center;
     }
 
     #toggleNavBar {
