--- a/css/under.css
+++ b/css/under.css
@@ -54,7 +54,7 @@ p.small {
 }
 
 .socials {
-  margin: 0.5rem 0 3rem 0;
+  margin: 0.5rem 0 1rem 0;
 }
 .icon-link {
   margin: 0.5rem 0;
@@ -65,4 +65,44 @@ p.small {
 }
 .icon-link:hover {
   opacity: 0.5;
+}
+
+.tooltip:hover .tooltip-container {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: opacity 0.5s ease-out;
+  -o-transition: opacity 0.5s ease-out;
+  transition: opacity 0.5s ease-out;
+}
+
+.tooltip-container {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  padding: 1rem;
+  width: 250px;
+  background-color: #d53232;
+  border-radius: 10px;
+  text-align: center;
+}
+.tooltip-trigger {
+  margin-bottom: 0;
+  opacity: 1;
+  -webkit-transition: opacity 0.5s ease-out;
+  -o-transition: opacity 0.5s ease-out;
+  transition: opacity 0.5s ease-out;
+}
+.tooltip-trigger:hover {
+  opacity: 0.5;
+}
+
+.tooltip-text {
+  font-size: 0.9rem;
+  color: #f5f1ed;
 }
