--- a/taylors-portfolio-app/src/assets/style.css
+++ b/taylors-portfolio-app/src/assets/style.css
@@ -36,25 +36,25 @@ h1 {
   margin: 0;
   color: var(--lapis-lazuli);
   font-weight: 600;
-  font-size: 42px;
+  font-size: 2.625rem;
   @media screen and (min-width: 1110px) {
-    font-size: 56px;
+    font-size: 3.5rem;
   }
 }
 h2 {
   margin: 0;
   color: var(--steel-blue);
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1.25rem;
   @media screen and (min-width: 1110px) {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 }
 h3 {
   margin: 0;
   color: var(--steel-blue);
   font-weight: 600;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 p {
   color: var(--main-text-color);
@@ -62,8 +62,8 @@ p {
   font-optical-sizing: auto;
   font-weight: 200;
   font-style: normal;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 li {
   color: var(--main-text-color);
@@ -71,8 +71,8 @@ li {
   font-optical-sizing: auto;
   font-weight: 200;
   font-style: normal;
-  font-size: 16px;
-  line-height: 21px;
+  font-size: 1rem;
+  line-height: 1.3125rem;
 }
 a {
   color: var(--link-text-color);
@@ -89,6 +89,7 @@ img {
 }
 
 .container {
+  margin: 2.5rem 0;
   padding: 0 2.5rem;
   display: flex;
   align-items: flex-start;
